# TestActions

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ZEBI  flake.nix
.github/workflows/: CheckPullRequestName.yml  EnforcePushRules.yml  LinuxBuild.yml  StableRelease.yml
CMake/: 1_Options.cmake  2_Optimizations.cmake  4_Sources.cmake  5_Warnings.cmake
Include/MemTideCommon/: MyCommonLib.hpp
Include/MemTideCore/: MyCoreThing.hpp
Scripts/: CheckPullRequestName.js  UpdateProjectVersion.js
Scripts/Shared/: ChangelogManager.js  Config.js  PullRequestManager.js  RepositoryManager.js  VersionManager.js
Source/: CMakeLists.txt  Main.cpp
Source/MemTideCommon/: CMakeLists.txt  MyCommonLib.cpp
Source/MemTideCore/: CMakeLists.txt  MyCoreThing.cpp
